# Bounce-Adventure-SFML

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
assets/levels/: level_01.txt  level_02.txt  level_03.txt  level_04.txt  level_05.txt  level_06.txt
build_tmp/: build.bat
docs/: PHASE_1_ARCHITECTURE.md  PHASE_2_ENGINE_FOUNDATION.md  PHASE_3_GAMEPLAY.md
include/BounceAdventure/Core/: AssetManager.hpp  AudioManager.hpp  Game.hpp  GameConfig.hpp  InputManager.hpp  Scene.hpp  SceneManager.hpp  SfmlCompat.hpp  WindowManager.hpp
include/BounceAdventure/Gameplay/: Checkpoint.hpp  Collectible.hpp  Goal.hpp  Hazard.hpp  HealthSystem.hpp  MovingPlatform.hpp  Platform.hpp  Player.hpp
include/BounceAdventure/Level/: Level.hpp  LevelData.hpp  LevelLoader.hpp  TileCodes.hpp
include/BounceAdventure/Physics/: Collision.hpp  CollisionSystem.hpp  PhysicsBody.hpp  PhysicsConstants.hpp
include/BounceAdventure/Scenes/: GameCompleteScene.hpp  GameScene.hpp  LevelCompleteScene.hpp  LevelSelectScene.hpp  MainMenuScene.hpp  PauseScene.hpp
include/BounceAdventure/UI/: Button.hpp  HUD.hpp  TextLabel.hpp
scripts/: build_game.bat  build_tests.bat  cmake_msvc.bat  configure_test.bat  generate_sfx.py
src/: main.cpp
src/Core/: AssetManager.cpp  AudioManager.cpp  Game.cpp  InputManager.cpp  SceneManager.cpp  WindowManager.cpp
src/Gameplay/: Checkpoint.cpp  Collectible.cpp  Goal.cpp  Hazard.cpp  HealthSystem.cpp  MovingPlatform.cpp  Platform.cpp  Player.cpp
src/Level/: Level.cpp  LevelLoader.cpp
src/Physics/: Collision.cpp  CollisionSystem.cpp  PhysicsBody.cpp  PhysicsConstants.cpp
src/Scenes/: GameCompleteScene.cpp  GameScene.cpp  LevelCompleteScene.cpp  LevelSelectScene.cpp  MainMenuScene.cpp  PauseScene.cpp
src/UI/: Button.cpp  HUD.cpp  TextLabel.cpp
tests/: CMakeLists.txt  test_collision.cpp  test_harness.hpp  test_level_loader.cpp  test_main.cpp  test_physics_constants.cpp  test_scene_manager.cpp
tests/fixtures/: level_3x3.txt  level_full.txt  level_missing_goal.txt  level_unknown_tile.txt
